[metadata]
name = bixistrava
version = 0.0.1
author = Renaud Bourassa
author_email = _@renaudb.com
description = BixiStrava - Upload Bixi rides to Strava
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/renaudb/bixistrava
license = BSD 3-Clause License
classifiers =
    Environment :: Console
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.9
    Operating System :: MacOS

[options]
packages = find:
python_requires = >= 3.6
install_requires =
    beautifulsoup4
    Flask
    pytz
    requests
